# ansible

./: ansible.cfg  hosts.yml  pyproject.toml
files/: jail.conf  jail.conf.j2  zimrc  zshrc
plays/: bootstrap.ansible.yml  bootstrap.yml  bsd.yml  sys.ansible.yml  sys.yml  user.ansible.yml  user.yml
plays/files/: buddyns_zone.conf  doas.conf  hetzner_zone.conf  zimrc  zshrc  zshrc_root  zshrc_user
plays/templates/: jail.conf.j2
